# home-api

./: .env.example  .gitignore  Dockerfile  README.md  cache.py  main.py  pyproject.toml  requirements.txt  util.py
app/: cache.py  database.py  main.py  util.py
app/resources/uklife/questions_2023/a_long_and_illustrious_history/tudors_and_stuarts/: 00.json
app/routers/: bins.py  clock.py  disk_info.py  meals.py  plants.py  todos.py  travel.py  uklife.py  weather.py
app/scripts/: migrate_legacy_data.py
app/services/bin_collection/: __init__.py  main.py  models.py
app/services/disk_info/: main.py  models.py
app/services/life_in_uk_test/: main.py  models.py  populate_database.py
app/services/meals/: models.py
app/services/plants/: models.py
app/services/shared/: models.py
app/services/todos/: models.py
app/services/travel/: main.py  models.py
app/services/weather/: main.py  models.py
routes/: bins.py  clock.py  disk_info.py  meals.py  plants.py  todos.py  travel.py  uklife.py  weather.py
scripts/: build_image.sh  delete_container.sh  delete_image.sh  deploy.sh  stop_container.sh
static/uklife/questions_2023/: exam_questions.json
static/uklife/questions_2023/a_long_and_illustrious_history/tudors_and_stuarts/: 01.json
static/uklife/questions_2023/a_modern_thriving_society/the_uk_today/: 00.json
static/uklife/questions_2023/uk_government_the_law_and_your_role/the_uk_and_international_institutions/: 00.json
