[project]
name = "home-api"
version = "1.0.0"
description = "API for useful home utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "hurry-filesize>=0.9",
    "requests>=2.32.5",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = ["ruff>=0.14.11", "ty>=0.0.10"]

[project.scripts]
migrate-legacy-data = "app.scripts.migrate_legacy_data:main"
populate-life-in-uk-test-db = "app.services.life_in_uk_test.populate_database:main"
